[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bcrg"
version = "1.2.1"

description = "Ballistics reticle generator"

readme = "README.md"
requires-python = ">=3.11"
keywords = ["ballistics", "reticles", "lua", "luascript", "python", "python3"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["lupa>=2.8"]

[project.urls]
"Homepage" = "https://github.com/o-murphy/bcrg"
"Bug Reports" = "https://github.com/o-murphy/bcrg/issues"
"Source" = "https://github.com/o-murphy/bcrg"


[tool.setuptools]
packages = ["bcrg"]

[dependency-groups]
dev = ["ruff>=0.15.22"]

[project.scripts]
bcrg = "bcrg.__main__:main"
